Threads for delete_after_millis